# CNNS-Rede-Neural-e2e-Python

./: .gitignore  LeNet5_Implementation.ipynb  README.md  main.py  pyproject.toml
